src/test/resources/frontendReference/invalid/syntaxErr/imports/invalidExtension.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.